syntax = "proto3";

package dxos;

message TestMessage {
  string field = 1;
}
